# SecureChat

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml
client/qt/: CMakeLists.txt  README.md  build-client.sh
client/qt/include/: chat_widget.hpp  login_dialog.hpp  main_window.hpp  message_widget.hpp  user_list_widget.hpp
client/qt/include/network/: client_connection.hpp  message_handler.hpp
client/qt/include/utils/: client_logger.hpp  theme_manager.hpp
client/qt/resources/: resources.qrc
client/qt/resources/themes/: dark.qss  light.qss
client/qt/src/: login_dialog.cpp  main.cpp  main_window.cpp
config/: server.json
include/core/: client_connection.hpp  event_loop.hpp  server.hpp  thread_pool.hpp
include/crypto/: encryption_manager.hpp
include/network/: async_io.hpp  socket_manager.hpp
include/utils/: config_manager.hpp  logger.hpp
monitoring/: prometheus.yml
scripts/: build.sh  docker-entrypoint.sh
src/: main.cpp
src/core/: server.cpp
tests/: test_encryption.cpp  test_networking.cpp  test_performance.cpp  test_security.cpp  test_utils.cpp
tests/load/: basic-load-test.js  stress-test.js
